--- a/templates/carte-config/master.xml.j2
+++ b/templates/carte-config/master.xml.j2
@@ -14,8 +14,8 @@
 
     <slaveserver>
         <name>master</name>
-        <hostname>{{ carte.hostname }}</hostname>
-        <port>{{ carte.port }}</port>
+        <hostname>{{ cartehostname }}</hostname>
+        <port>{{ carteport }}</port>
         <master>Y</master>
     </slaveserver>
 
